# job-search-agent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
docs/: agent_workflow.md  analysis_zh.md  demo_fit_analysis.md
examples/: ai_automation_jd.txt
profiles/: nongying_public.json  sample_candidate.json
scripts/: build_release.py
src/job_agent/: __init__.py  api_models.py  cli.py  generator.py  job_parser.py  langgraph_workflow.py  llm.py  llm_drafting.py  matcher.py  memory.py  models.py  negative_ability.py  profile.py  server.py  tracker.py  workflow.py
tests/: test_generator.py  test_llm_drafting.py  test_matcher.py  test_memory.py  test_release_build.py  test_server.py  test_workflow.py
web/: index.html
